# EasyCmake

./: .gitignore  CMakeLists.txt  main.cpp
source/: global.h
source/cmake_generator/: cmake_generator.cpp  cmake_generator.h  cmake_serializer.cpp  cmake_serializer.h  external_repo.cpp  external_repo.h  include_settings.cpp  include_settings.h  installed_package.cpp  installed_package.h  library.h  library_settings.cpp  library_settings.h  pointer_holder.h  repository.cpp  repository.h  settings_descriptor.h  subdirectory_settings.cpp  subdirectory_settings.h  window_manager.cpp  window_manager.h
source/general/: color.h  helpers.cpp  helpers.h  includes.h
source/object/: component.h  object.cpp  object_base.h  object_properties.cpp  object_properties.h  object_property_register.cpp  object_property_register.h  registry.cpp  registry.h  tagged_object.h
source/window/: window.cpp  window.h
